Fixed layout break in schedule in mobile screens

--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,7 @@
 hr {
   background-color: #e4e4e4;
 }
+
+.overflow-auto {
+  overflow: auto;
+}
